# forward-model

./: CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: claude.yml  docs.yml  pull-request.yml  release.yml  slack-release-notification.yml
benchmarks/: README.md  bench_calculator.py  bench_talwani.py
docs/: examples.md  gen_ref_pages.py  getting-started.md  index.md  theory.md
docs/api-reference/: index.md
docs/development/: architecture.md  contributing.md
docs/plans/: 2026-02-27-type-dispatched-calculate-anomaly.md  2026-03-01-heat-flow-visualization.md  2026-03-02-forward-to-magnetic-model.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  examples.md  visualization.md
examples/: .forward-model.toml  README.md  asymmetric_paleochannel.json  dense_intrusion.json  granitic_basin.json  gravity_tutorial.ipynb  heatflow_tutorial.ipynb  high_susceptibility_intrusion.json  multi_body.json  muskoka_paleochannel.json  simple_dyke.json  volcanic_body.json
forward_model/: __init__.py  __main__.py  config.py
forward_model/cli/: __init__.py  commands.py
forward_model/compute/: __init__.py  batch.py  calculator.py  geometry.py  gravity.py  heatflow_talwani.py  talwani.py
forward_model/io/: __init__.py  loaders.py  writers.py
forward_model/models/: __init__.py  base.py  body.py  field.py  gravity_model.py  heatflow_model.py  magnetic_model.py  model.py  properties.py
forward_model/viz/: __init__.py  plotter.py  styles.py
tests/: conftest.py  test_compute.py  test_io.py  test_models.py  test_version_sync.py
tests/integration/: test_batch_workflow.py  test_workflow.py
tests/unit/: test_config.py
tests/unit/cli/: test_commands.py
tests/unit/compute/: test_batch.py  test_calculator.py  test_geometry.py  test_gravity.py  test_heatflow_talwani.py  test_talwani.py
tests/unit/io/: test_csv_loader.py  test_loaders.py  test_numpy_writer.py  test_writers.py
tests/unit/models/: test_body.py  test_field.py  test_gravity_model.py  test_heatflow_model.py  test_model.py
tests/unit/viz/: test_plotter.py  test_styles.py
