[project]
name = "forward-model"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "typos>=1.16.0",
    "yamllint>=1.35.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["forward_model"]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/__main__.py",
]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    "@abstractmethod",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "if 0:",
    "if __name__ == '__main__':",
]
